# Streams-mqtt-gateway

./: .gitignore  Cargo.toml  README.md  config.json  send_test
src/: lib.rs  main.rs
src/api/: handlers.rs  stream_server.rs
src/device_auth/: keystore.json  keystore.rs
src/mqtt_connectivity/: handlers.rs  mod.rs  mqtt_client.rs
src/security/: keystore.json
src/streams_gateway_core/: .gitignore  Cargo.toml
src/streams_gateway_core/src/: lib.rs
src/streams_gateway_core/src/gateway/: publisher.rs
src/streams_gateway_core/src/payload/: mod.rs  payload_serializer.rs
src/types/: config.rs  mod.rs  static_topic.rs
