[package]
name = "streams-mqtt-gateway"
version = "0.1.0"
authors = ["AleBuser <4l3bu53r@gmail.com>"]
edition = "2018"

[lib]
name = "local"
path = "src/lib.rs"

[dependencies]
failure = "0.1.7"
anyhow = { version = "1.0", default-features = false }
gateway_core = { git = "https://github.com/iot2tangle/streams-gateway-core", branch="develop"}
serde = {version="1.0.110", features = ["derive"] }
serde_derive = "1.0.110"
serde_json = "1.0.53"
tokio = {version = "0.2.18", features = ["macros"]}
rust-crypto = "0.2.36"
rand = "0.7.3"
base64 = "^0.12"
paho-mqtt = "0.7.1"
once_cell = "1.4.1"
